--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   flutter_icons: ^1.1.0
   intl: ^0.16.1
 
+#  Firebase
+  firebase_core: ^0.5.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
