--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,7 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
@@ -59,5 +60,12 @@ flutter {
 }
 
 dependencies {
+    // Importing the Firebase BoM
+    // Using Firebase BoM, declaration of dependencies of the Firebase product is needed without specifying their specific versions
+    implementation platform('com.google.firebase:firebase-bom:26.2.0')
+    // Declaring the dependency for the Firebase SDK for Google Analytics
+    implementation 'com.google.firebase:firebase-analytics'
+    // Declaring the dependencies for Firebase Authentication
+    implementation 'com.google.firebase:firebase-auth'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
