--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: class_manager
 description: A new Flutter project.
 
-publish_to: 'none' 
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -12,10 +12,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.3
+  intl: ^0.16.1
   flutter_svg: ^0.19.0
   flutter_icons: ^1.1.0
-  intl: ^0.16.1
+  cupertino_icons: ^0.1.3
+  firebase_auth: ^0.18.4+1
 
 dev_dependencies:
   flutter_test:
@@ -25,5 +26,5 @@ flutter:
   uses-material-design: true
 
   assets:
-   - assets/icons/
-   - assets/images/
+    - assets/icons/
+    - assets/images/
