--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   intl: ^0.16.1
   flutter_svg: ^0.19.0
   flutter_icons: ^1.1.0
+  firebase_core: ^0.5.3
   cupertino_icons: ^0.1.3
   firebase_auth: ^0.18.4+1
 
