--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: class_manager
-description: A new Flutter project.
+name: Friday
+description: Your Personal Class Manager Assistant, It'll never let you miss another assignment deadline or upcoming test.
 
 publish_to: "none"
 
