--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
 
   intl: ^0.16.1
+  provider: ^4.3.3
   fluttertoast: ^7.1.6
   flutter_svg: ^0.19.0
   flutter_icons: ^1.1.0
