--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,9 @@ dependencies:
   fluttertoast: ^7.1.6
   flutter_svg: ^0.19.0
   flutter_icons: ^1.1.0
-  firebase_core: ^0.5.3
   cupertino_icons: ^0.1.3
-  firebase_auth: ^0.18.4+1
+  cloud_firestore: ^0.16.0
+  firebase_auth: ^0.20.0+1
 
 dev_dependencies:
   flutter_test:
