--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   cloud_firestore: ^0.16.0
   firebase_auth: ^0.20.0+1
+  google_sign_in:
 
 dev_dependencies:
   flutter_test:
