profile picture fix1

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="Friday"
         android:icon="@mipmap/launcher_icon">
+        android:requestLegacyExternalStorage="true"
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
