--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+
 name: class_manager
 description: A new Flutter project.
 
@@ -20,6 +21,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   cloud_firestore: ^0.16.0
   firebase_auth: ^0.20.0+1
+  image_picker: ^0.6.7+22
+  firebase_storage: ^7.0.0
 
 dev_dependencies:
   flutter_test:
