--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        
+        android:requestLegacyExternalStorage= "true"
         android:name="io.flutter.app.FlutterApplication"
         android:label="Friday"
         android:icon="@mipmap/launcher_icon">
