--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   google_sign_in:
   uuid: ^3.0.1
   flutter_facebook_login:
+  url_launcher: ^6.0.2
 
 dev_dependencies:
   flutter_test:
