--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,21 +12,21 @@ dependencies:
   flutter:
     sdk: flutter
 
-  intl: ^0.16.1
+  intl: ^0.17.0
   provider: ^4.3.3
   fluttertoast: ^7.1.6
   flutter_svg: ^0.21.0-nullsafety.0
   flutter_icons: ^1.1.0
   cupertino_icons: ^0.1.3
-  cloud_firestore: ^0.16.0
-  firebase_auth: ^0.20.0+1
+  cloud_firestore: ^1.0.3
+  firebase_auth: ^1.0.1
   email_validator: '^1.0.0'
   google_sign_in:
   uuid: ^3.0.1
   flutter_facebook_login:
-  url_launcher: ^6.0.2
   image_picker:
-  firebase_storage:
+  url_launcher: ^6.0.2
+  firebase_storage: ^8.0.1
   path_provider:
 
 dev_dependencies:
