--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: class_manager
-description: A new Flutter project.
+name: friday
+description: Your Personal Class Manager Assistant, It'll never let you miss another assignment deadline or upcoming test.
 
 publish_to: "none"
 
@@ -38,7 +38,7 @@ dev_dependencies:
   flutter_launcher_icons: "^0.9.0"
 
 flutter_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
   image_path: "assets/icons/icon.png"
 
