--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,6 @@ dependencies:
   email_validator: ^2.0.1
   google_sign_in: ^5.3.3
   uuid: ^3.0.6
-  image_picker: ^0.8.5+3
   url_launcher: ^6.1.3
   firebase_storage: ^10.2.18
   path_provider: ^2.0.11
@@ -30,6 +29,8 @@ dependencies:
   table_calendar: ^3.0.6
   flutter_login_facebook: ^1.5.0+1
   flutter_icons_null_safety: ^1.1.0
+  firebase_core: ^1.18.0
+  image_picker: ^0.8.5+3
 
 
 dev_dependencies:
