--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,9 @@ dependencies:
   cupertino_icons: ^1.0.5
   cloud_firestore: ^4.7.1
   firebase_auth: ^4.6.1
-  email_validator: ^2.0.1
+  email_validator: ^2.1.17
   google_sign_in: ^6.1.0
-  uuid: ^3.0.6
+  uuid: ^3.0.7
   url_launcher: ^6.1.3
   firebase_storage: ^11.2.1
   path_provider: ^2.0.11
@@ -30,7 +30,7 @@ dependencies:
   flutter_login_facebook: ^1.5.0+1
   flutter_icons_null_safety: ^1.1.0
   firebase_core: ^2.13.0
-  image_picker: ^0.8.5+3
+  image_picker: ^0.8.9
 
 
 
