--- a/android/.settings/org.eclipse.buildship.core.prefs
+++ b/android/.settings/org.eclipse.buildship.core.prefs
@@ -1,11 +1,11 @@
-arguments=
+arguments=--init-script C\:\\Users\\Asus\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.19.0\\config_win\\org.eclipse.osgi\\53\\0\\.cp\\gradle\\init\\init.gradle --init-script C\:\\Users\\Asus\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.19.0\\config_win\\org.eclipse.osgi\\53\\0\\.cp\\gradle\\protobuf\\init.gradle
 auto.sync=false
 build.scans.enabled=false
-connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
+connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(7.4.2))
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=C\:/Program Files/Java/jdk-17
+java.home=C\:/Program Files/Java/jdk-11.0.8
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
