--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter_icons_null_safety: ^1.1.0
   firebase_core: ^2.13.0
   image_picker: ^0.8.9
+  introduction_screen: ^3.1.9
+  is_first_run: ^1.0.0
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
