--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   introduction_screen: ^3.1.9
   is_first_run: ^1.0.0
   shared_preferences: ^2.1.1
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
