added localization support for multiple languages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   http: ^0.13.6
 
   flutter_local_notifications: ^15.1.0+1
+  flutter_localizations:
+    sdk: flutter
 
 
 dev_dependencies:
@@ -57,6 +59,7 @@ flutter_icons:
   image_path: "assets/icons/icon.png"
 
 flutter:
+  generate: true
   uses-material-design: true
 
   assets:
