--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -1,6 +1,6 @@
 name: "🐞 Bug Report"
 description: "Create a report to help us improve"
-title: "BUG:"
+title: "[BUG]"
 labels: [Bug, Needs Triage]
 body:
   - type: checkboxes
