fix: Updated title

--- a/.github/ISSUE_TEMPLATE/documentation.yaml
+++ b/.github/ISSUE_TEMPLATE/documentation.yaml
@@ -1,6 +1,6 @@
 name: "📑 Documentation Update"
 description: "Improve Documentation"
-title: "DOC:"
+title: "[DOC]"
 labels: [DOC, Needs Triage]
 body:
  
