--- a/.github/ISSUE_TEMPLATE/feature.yaml
+++ b/.github/ISSUE_TEMPLATE/feature.yaml
@@ -1,6 +1,6 @@
 name: "✨ Feature Request"
 description: "Suggest an idea for this project "
-title: "Feat:"
+title: "[Feat]"
 labels: [Feat, Needs Triage]
 body:
  
